objects/ssot__EngagementTopic__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationEntryId__c</fullName>
        <label>Conversation Entry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementId__c</fullName>
        <label>Engagement</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementTopicGroupId__c</fullName>
        <label>Engagement Topic Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Topic Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToId__c</fullName>
        <label>Related To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761166803_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceApplicationEngagement_Id_map_E_rel</label>
        <referenceTo>ssot__DeviceApplicationEngagement__dlm</referenceTo>
        <relationshipLabel>DeviceApplicationEngagement_Id_map_E_rel</relationshipLabel>
        <relationshipName>rel_1697761166803_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761169806_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailEngagement_Id_map_EngagementTop_rel</label>
        <referenceTo>ssot__EmailEngagement__dlm</referenceTo>
        <relationshipLabel>EmailEngagement_Id_map_EngagementTop_rel</relationshipLabel>
        <relationshipName>rel_1697761169806_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761173731_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementTopic_CampaignId_map_Oppor_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>EngagementTopic_CampaignId_map_Oppor_rel</relationshipLabel>
        <relationshipName>rel_1697761173731_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>